# WellNest

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  data-quality.yml
.streamlit/: config.toml
ai/: __init__.py
ai/briefs/: __init__.py  generator.py  prompts.py
ai/documents/: README.md
ai/quality/: __init__.py  llm_validator.py
ai/rag/: __init__.py  chain.py  indexer.py  retriever.py
api/: __init__.py  config.py  dependencies.py  main.py
api/middleware/: __init__.py  rate_limiter.py
api/models/: __init__.py  common.py  county.py  school.py  score.py
api/routers/: __init__.py  ask.py  counties.py  health.py  predictions.py  reports.py  schools.py  search.py
dashboard/: __init__.py  app.py  theme.py  ui_theme.py
dashboard/components/: __init__.py  maps.py  school_card.py  score_gauge.py
dashboard/pages/: 1_National_Map.py  2_School_Explorer.py  3_Resource_Gaps.py  4_Trends.py  5_AI_Insights.py  6_Ask_WellNest.py  7_Compare.py
dashboard/sample_data/: anomalies.csv  child_wellbeing_scores.csv  county_ai_briefs.csv  county_summary.csv  generate.py  quality_flags.csv  resource_gaps.csv  school_profiles.csv  trend_metrics.csv
dashboard/utils/: __init__.py  cache.py  db.py
docs/: api_guide.md  architecture.md  contributing.md  data_dictionary.md  deployment.md  methodology.md  user_guide.md
docs/adr/: 001-dagster-over-airflow.md  002-polars-over-pandas.md  003-postgresql-over-delta-lake.md  004-faiss-over-chromadb.md
infrastructure/docker/: Dockerfile.api  Dockerfile.dagster  docker-compose.yml  init-db.sql
infrastructure/terraform/: variables.tf
infrastructure/terraform/aws/: main.tf
infrastructure/terraform/azure/: main.tf
ingestion/: __init__.py
ingestion/schemas/: cdc_env_health_schema.json  cdc_places_schema.json  census_acs_schema.json  epa_airnow_schema.json  fbi_ucr_schema.json  fema_nri_schema.json  hrsa_hpsa_schema.json  hrsa_mua_schema.json  nces_ccd_schema.json  nces_edge_schema.json  noaa_nws_alerts_schema.json  usda_food_access_schema.json
ingestion/sources/: __init__.py  cdc_env_health.py  cdc_places.py  census_acs.py  epa_airnow.py  fbi_ucr.py  fema_nri.py  hrsa_hpsa.py  hrsa_mua.py  nces_ccd.py  nces_edge.py  noaa_nws_alerts.py  usda_food_access.py
ingestion/utils/: __init__.py  geo_utils.py  http_client.py
ml/: __init__.py
ml/experiments/: mlflow_config.py
ml/features/: __init__.py  feature_engineering.py
ml/serving/: __init__.py  predict.py
ml/training/: __init__.py  train_anomaly_detector.py  train_proficiency_predictor.py
orchestration/: __init__.py  definitions.py  resources.py  schedules.py  sensors.py
orchestration/assets/: __init__.py  ai_assets.py  bronze.py  gold.py  ml_assets.py  quality_assets.py  silver.py
pwa/: index.html  manifest.json  sw.js
pwa/css/: styles.css
pwa/js/: api.js  app.js  map.js
reports/: __init__.py  email_sender.py  pdf_generator.py
reports/templates/: county_report.html
scripts/: generate_reports.py  seed_sample_data.py  setup_local.sh
tests/: conftest.py
tests/api/: test_reports_api.py  test_schools_api.py  test_search_api.py
tests/integration/: test_dbt_models.py  test_pipeline.py
tests/unit/: test_ai_briefs.py  test_geo_utils.py  test_ingestion.py  test_scoring.py
transformation/dbt_project/: dbt_project.yml  profiles.yml
transformation/dbt_project/macros/: geo_macros.sql  scoring.sql
transformation/dbt_project/models/gold/: _gold_schema.yml  child_wellbeing_score.sql  county_summary.sql  resource_gaps.sql  school_rankings.sql  trend_metrics.sql
transformation/dbt_project/models/silver/: _silver_schema.yml  community_areas.sql  school_environment.sql  school_health_context.sql  school_profiles.sql  school_resources.sql  school_safety.sql
transformation/dbt_project/models/staging/: _staging_sources.yml  stg_cdc_places.sql  stg_census_acs.sql  stg_epa_aqi.sql  stg_fbi_crime.sql  stg_fema_nri.sql  stg_hrsa_hpsa.sql  stg_nces_schools.sql  stg_usda_food.sql
transformation/dbt_project/tests/: test_school_has_location.sql  test_score_range.sql
transformation/quality/: soda_config.yml
transformation/quality/soda_checks/: freshness_checks.yml  gold_scores.yml  silver_health.yml  silver_schools.yml
